--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(TechnicalTest C CXX)
 if (MSVC)
   add_compile_options(/WX /W4 /fpermissive)
 else()
-  add_compile_options(-Wall -Wextra -Werror -pedantic -fpermissive -fstrict-enums)
+  # add_compile_options(-Wall -Wextra -Werror -pedantic -fpermissive -fstrict-enums)
 endif()
 
 add_subdirectory(OrderCache)
