--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(TechnicalTest C CXX)
+project(TechnicalTest
+  LANGUAGES C CXX
+  VERSION 1.0.0.0
+  DESCRIPTION "Technical Test Coderio"
+  HOMEPAGE_URL "https://github.com/DenisRitchie/TechnicalTest_Coderio"
+)
 
 if (MSVC)
   add_compile_options(/WX /W4 /fpermissive)
@@ -10,3 +15,4 @@ endif()
 
 add_subdirectory(OrderCache)
 add_subdirectory(Program)
+add_subdirectory(Tests)
