fix: Windows Fixes

--- a/Program/CMakeLists.txt
+++ b/Program/CMakeLists.txt
@@ -8,3 +8,10 @@ target_compile_features(TechnicalTestProgram PUBLIC c_std_11 cxx_std_17)
 
 target_include_directories(TechnicalTestProgram PUBLIC ${CMAKE_SOURCE_DIR}/OrderCache)
 target_link_libraries(TechnicalTestProgram PUBLIC TechnicalTest::Library::OrderCache)
+
+set_target_properties(TechnicalTestProgram
+  PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output/bin"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output/bin"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output/bin"
+)
