--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ project(TechnicalTest
 )
 
 if (MSVC)
-  add_compile_options(/WX /W4 /fpermissive)
+  add_compile_options(/WX /W4 /permissive /Zc:__cplusplus)
 else()
-  # add_compile_options(-Wall -Wextra -Werror -pedantic -fpermissive -fstrict-enums)
+  add_compile_options(-Wall -Wextra -Werror -pedantic -fpermissive -fstrict-enums)
 endif()
 
 add_subdirectory(OrderCache)
