--- a/OrderCache/CMakeLists.txt
+++ b/OrderCache/CMakeLists.txt
@@ -30,3 +30,10 @@ target_sources(OrderCache
 target_compile_features(OrderCache PUBLIC c_std_11 cxx_std_17)
 
 target_include_directories(OrderCache PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+set_target_properties(OrderCache
+    PROPERTIES
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output/bin"
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output/bin"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output/bin"
+)
